# filetools-desktop

./: .gitignore  Cargo.toml  FyneApp.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml
cmd/filetools/: main.go
docs/: ARCHITECTURE.md  MANUAL_TESTS.md  USAGE.md
internal/engine/doc/: doc_test.go  libreoffice.go  txt.go  word.go
internal/engine/image/: codec.go  compress.go  convert.go  crop.go  image_test.go  resize.go
internal/engine/pdf/: compress.go  extract.go  imagestopdf.go  merge.go  pages.go  pdf.go  pdf_test.go  resize.go  rotate.go  split.go
internal/platform/: open.go  paths.go
internal/tool/: options.go  registry.go  spec.go  tool.go
internal/ui/: app.go  category.go  home.go  icons.go  preview_test.go  theme.go  tooldetail.go  ui_test.go  widgets.go
internal/validate/: validate.go
scripts/: build-macos.sh  build-windows.ps1
src/: main.rs
